Fix overflowing images on image-only posts.

--- a/assets/scss/base/_define.scss
+++ b/assets/scss/base/_define.scss
@@ -32,4 +32,9 @@ a {
     color: #aaf;
   }
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
 /* stylelint-enable */
